Update whyus & services

--- a/index.html
+++ b/index.html
@@ -113,24 +113,25 @@
 
                 <div class="swiper-slide">
                   <div class="item">
-                    <h3 class="mb-3">Corporate Setup</h3>
-                    <p>We provide end-to-end support for establishing your company in Korea, ensuring legal compliance from day one.</p>
+                    <h3 class="mb-3">Expertise Across Borders</h3>
+                    <p>Our team combines global experience and local knowledge, led by internationally educated attorneys and Korean-licensed legal professionals.</p>
                   </div>
                 </div><!-- End slide item -->
 
                 <div class="swiper-slide">
                   <div class="item">
-                    <h3 class="mb-3">Regulatory Compliance</h3>
-                    <p>Navigate the complexities of Korean business regulations with our tailored compliance solutions.</p>
+                    <h3 class="mb-3">Tailored Legal Solutions</h3>
+                    <p>We provide customized legal strategies to meet your business’s unique needs, from corporate setup to compliance and operations.</p>
                   </div>
                 </div><!-- End slide item -->
 
                 <div class="swiper-slide">
                   <div class="item">
-                    <h3 class="mb-3">Operational Legal Support</h3>
-                    <p>From contracts to dispute management, we offer ongoing legal services to keep your business running smoothly.</p>
+                    <h3 class="mb-3">End-to-End Support</h3>
+                    <p>From establishing your company to managing contracts and disputes, we deliver comprehensive, ongoing legal support to keep your business running smoothly.</p>
                   </div>
                 </div><!-- End slide item -->
+              
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -159,7 +160,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0"><i class="bi bi-briefcase" style="color: #f57813;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-bank" style="color: #f57813;"></i></div>
             <div>
               <h4 class="title">Corporate Setup</h4>
               <p class="description">From registration to operations, we help establish your business in Korea seamlessly.</p>
@@ -182,33 +183,33 @@
               <p class="description">Professional assistance for contracts, disputes, and daily legal challenges.</p>
             </div>
           </div><!-- End Service Item -->
-<!-- 
+
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon flex-shrink-0"><i class="bi bi-binoculars" style="color: #15bfbc;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-file-text" style="color: #15bfbc;"></i></div>
             <div>
-              <h4 class="title">Magni Dolores</h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <h4 class="title">Contract Drafting & Review</h4>
+              <p class="description">Expertly crafted contracts tailored to protect your business interests.</p>
+              <!-- <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-brightness-high" style="color: #f5cf13;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-shield-check" style="color: #f5cf13;"></i></div>
             <div>
-              <h4 class="title">Nemo Enim</h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <h4 class="title">Intellectual Property Protection</h4>
+              <p class="description">Safeguard your ideas with patents, trademarks, and copyrights.</p>
+              <!-- <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a> -->
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week" style="color: #1335f5;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-briefcase" style="color: #1335f5;"></i></div>
             <div>
-              <h4 class="title">Eiusmod Tempor</h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <h4 class="title">Joint Ventures & Partnerships</h4>
+              <p class="description">Strategic guidance for structuring partnerships and collaborations.</p>
+              <!-- <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a> -->
             </div>
-          </div> -->
+          </div>
 
         </div>
 
