--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Counsely</title>
-  <meta name="description" content="Counsely: Comprehensive legal consulting for businesses in Korea">
+  <meta name="description" content="Counsely: End-to-end legal consulting">
   <meta name="keywords" content="legal consulting, corporate setup, compliance, legal solutions, Counsely">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Counsely - Comprehensive Legal Services">
+  <meta property="og:description" content="Expert legal consulting for businesses in Korea: corporate setup, compliance solutions, and operational legal support tailored for your needs.">
+  <meta property="og:image" content="https://counsely.co/assets/img/counsely-og.png">
+  <meta property="og:url" content="https://counsely.co">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Counsely">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -268,7 +276,7 @@
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Info</h4>
             <p>625 Teheran-ro, Gangnam-gu</p>
-            <p>Seoul 535022</p>
+            <p>Seoul 06173</p>
             <p>Republic of Korea</p>
             <p class="mt-4"><strong>Phone:</strong> <span>+82 10 5711 1987</span></p>
             <p><strong>Email:</strong> <span>info@counsely.co</span></p>
